# amazon_challenge_pr2_sim

./: CMakeLists.txt  README.md  package.xml  setup.py
calibrateBase/: baseMove.py  baseScan.py  calibrateBase.py  follow_object.py  shelfPublisher.py
config/: test_case_1.json  test_case_1.yaml  test_random.yaml
detector/: detector_action.py  detector_deamon.py
gazebo_models/cheezit_big_original/: model.sdf
gazebo_models/cheezit_big_original/meshes/: cheezit_big_original.dae
gazebo_models/crayola_64_ct/: model.sdf
gazebo_models/crayola_64_ct/meshes/: crayola_64_ct.dae
grasping/: __init__.py  drop_dictionary.pr2  dropping_action.py  grasping_action.py  grasping_lib.py  my_pr2.py  stack_campbells_on_pringles_dual_arm.pr2
launch/: pr2_empty_shelf.launch  pr2_kiva_shelf_sim.launch  test_case_1.launch  test_random.launch
