<?xml version="1.0"?>
<package>
  <name>pr2_kiva_shelf_sim</name>
  <version>0.0.0</version>
  <description>Gazebo simulation of PR2 with Amazon Kiva shelf.</description>

  <maintainer email="fevb@kth.se">Francisco Viña</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>pr2_gazebo</build_depend>
  <build_depend>pr2_moveit_config</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>pr2_gazebo</run_depend>
  <run_depend>pr2_moveit_config</run_depend>

</package>
